--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-modern-drawer": "^1.4.0"
   },
   "devDependencies": {
     "@playwright/browser-chromium": "^1.49.0",
