--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "dev:firefox": "wxt -b firefox",
     "build": "wxt build",
     "build:firefox": "wxt build -b firefox",
-		"submit:init": "wxt submit init",
-		"submit:dry":"wxt submit --dry-run --chrome-zip .output/value-finder-0.1-chrome.zip",
+    "submit:init": "wxt submit init",
+    "submit:dry": "wxt submit --dry-run --chrome-zip .output/value-finder-0.1-chrome.zip",
     "zip": "wxt zip",
     "zip:firefox": "wxt zip -b firefox",
     "compile": "tsc --noEmit",
@@ -18,6 +18,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "json-2-csv": "^5.5.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modern-drawer": "^1.4.0"
