--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@wxt-dev/storage": "^1.0.1",
     "json-2-csv": "^5.5.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
