--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@webext-core/messaging": "^2.2.0",
     "@wxt-dev/storage": "^1.0.1",
     "json-2-csv": "^5.5.7",
     "react": "^18.3.1",
@@ -25,16 +26,16 @@
     "react-modern-drawer": "^1.4.0"
   },
   "devDependencies": {
-    "@playwright/browser-chromium": "^1.49.0",
+    "@playwright/browser-chromium": "^1.49.1",
     "@types/chrome": "^0.0.280",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "@wxt-dev/module-react": "^1.1.1",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@wxt-dev/module-react": "^1.1.3",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
-    "typescript": "^5.6.3",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3",
     "vitest": "^2.1.8",
-    "wxt": "^0.19.13"
+    "wxt": "^0.19.25"
   }
 }
